--- a/gallery.html
+++ b/gallery.html
@@ -443,6 +443,7 @@
 
         <script src="js/jquery-latest.js"></script>
         <script src="js/color-thief.min.js"></script>
+        <script src="js/imagesloaded.pkgd.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
