--- a/single.html
+++ b/single.html
@@ -55,6 +55,7 @@
 
         <script src="js/color-thief.min.js"></script>
         <script src="js/jquery-latest.js"></script>
+        <script src="js/imagesloaded.pkgd.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
